--- a/week1/Week1-assignment.ipynb
+++ b/week1/Week1-assignment.ipynb
@@ -22,9 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a docstring!'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"This is a docstring!\"\"\""
    ]
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +58,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Interactive namespace is empty.\n"
+      "SVC\t X\t a\t alpha\t b\t c\t classifier\t datasets\t iris\t \n",
+      "predictions\t sklearn\t var_list\t y\t \n",
+      "<module 'sklearn.datasets' from '/srv/conda/envs/notebook/lib/python3.7/site-packages/sklearn/datasets/__init__.py'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "%who\n",
+    "print(datasets)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC\t X\t a\t alpha\t b\t c\t classifier\t datasets\t iris\t \n",
+      "predictions\t sklearn\t var_list\t y\t \n"
      ]
     }
    ],
@@ -64,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,16 +105,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['datasets', 'iris']"
+       "['SVC',\n",
+       " 'X',\n",
+       " 'a',\n",
+       " 'alpha',\n",
+       " 'b',\n",
+       " 'c',\n",
+       " 'classifier',\n",
+       " 'datasets',\n",
+       " 'iris',\n",
+       " 'predictions',\n",
+       " 'sklearn',\n",
+       " 'var_list',\n",
+       " 'y']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +180,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +206,7 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -185,18 +229,27 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `raise` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import datasets\n",
     "\n",
-    "# Load the iris dataset\n",
+    "# Load the iris datase\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "raise?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -236,24 +289,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVC\t X\t classifier\t datasets\t iris\t predictions\t var_list\t y\t \n"
+      "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "    decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
+      "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+      "    tol=0.001, verbose=False) \n",
+      " and I am just testing\n",
+      "<function train_test_split at 0x7fb346f44268>\n"
      ]
     }
    ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "\n",
+    "classifier = SVC(kernel=\"rbf\", gamma='auto')\n",
+    "classifier.fit(X, y)\n",
+    "predictions = classifier.predict(X)\n",
+    "\n",
+    "print(classifier, \"\\n and I am just testing\")\n",
+    "#print?\n",
+    "print(train_test_split)\n",
+    "#train_test_split?\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index.rst  Week1-assignment.ipynb\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m Return the Unicode code point for a one-character string.\n",
+       "\u001b[0;31mType:\u001b[0m      builtin_function_or_method\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ord('b')\n",
+    "ord?\n",
+    "\n",
+    "%ls *\n",
+    "a, b, c = 1, 2, 3\n",
+    "\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "\n",
+    "import sklearn\n",
+    "sklearn.__version__\n",
+    "\n",
+    "y_train[99]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%who"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_test_split?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,39 +441,23 @@
     "  - Estimators:\n",
     "    - Classifiers\n",
     "    - Regressors\n",
-    "3. Fit\n",
-    "4. Predict"
+    "3. Train test split (or cross-validation)\n",
+    "4. Fit\n",
+    "5. Predict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -346,7 +483,9 @@
     "from sklearn.svm import SVC\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "x = 0;\n",
+    "if x > 0:\n",
+    "    raise NotImplementedError()\n"
    ]
   },
   {
