--- a/week1/Week1-assignment.ipynb
+++ b/week1/Week1-assignment.ipynb
@@ -21,118 +21,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'This is a docstring!'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"This is a docstring!\"\"\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\beta=5$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alpha = 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVC\t X\t a\t alpha\t b\t c\t classifier\t datasets\t iris\t \n",
-      "predictions\t sklearn\t var_list\t y\t \n",
-      "<module 'sklearn.datasets' from '/srv/conda/envs/notebook/lib/python3.7/site-packages/sklearn/datasets/__init__.py'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "%who\n",
-    "print(datasets)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVC\t X\t a\t alpha\t b\t c\t classifier\t datasets\t iris\t \n",
-      "predictions\t sklearn\t var_list\t y\t \n"
-     ]
-    }
-   ],
-   "source": [
-    "%who"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var_list = %who_ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['SVC',\n",
-       " 'X',\n",
-       " 'a',\n",
-       " 'alpha',\n",
-       " 'b',\n",
-       " 'c',\n",
-       " 'classifier',\n",
-       " 'datasets',\n",
-       " 'iris',\n",
-       " 'predictions',\n",
-       " 'sklearn',\n",
-       " 'var_list',\n",
-       " 'y']"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "var_list"
+    "## Definitions\n",
+    "\n",
+    "- Overfitting (Variance): tailored to a specific dataset (does not generalize well), misses the point, memorizes the data\n",
+    "- Underfitting (Bias): accuracy could be better, too general \n",
+    "\n",
+    "## Scikit-learn workflow\n",
+    "\n",
+    "1. Import\n",
+    "2. Instantiate (a class)\n",
+    "  - Estimators:\n",
+    "    - Classifiers\n",
+    "    - Regressors\n",
+    "3. Fit ('fit()')\n",
+    "4. Predict ('predict()')\n",
+    "5. Evaluate ('score()')\n",
+    "\n",
+    "// old\n",
+    "3. Train test split (or cross-validation)\n",
+    "4. Fit\n",
+    "5. Predict"
    ]
   },
   {
@@ -161,17 +72,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "checksum": "e359096524972c5572e2e3495d1510e2",
+     "grade": false,
+     "grade_id": "cell-c1e7f79ad332b8f9",
+     "locked": false,
+     "schema_version": 1,
+     "solution": true
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
-    "iris = datasets.load_iris()"
+    "\n",
+    "# Load the iris datase\n",
+    "iris = datasets.load_iris()\n",
+    "\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +105,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +131,7 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,39 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "deletable": false,
-    "nbgrader": {
-     "checksum": "e359096524972c5572e2e3495d1510e2",
-     "grade": false,
-     "grade_id": "cell-c1e7f79ad332b8f9",
-     "locked": false,
-     "schema_version": 1,
-     "solution": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Object `raise` not found.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn import datasets\n",
-    "\n",
-    "# Load the iris datase\n",
-    "# YOUR CODE HERE\n",
-    "#raise NotImplementedError()\n",
-    "raise?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -274,199 +167,91 @@
    "source": [
     "## Part B. Use an SVM to predict iris species.\n",
     "\n",
-    "To setup the data and train an SVM, run the following:\n",
-    "```python\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
-    "X = iris.data\n",
-    "y = iris.target\n",
-    "\n",
-    "classifier = SVC(kernel=\"rbf\")\n",
-    "classifier.fit(X, y)\n",
-    "predictions = classifier.predict(X)\n",
-    "```"
+    "To setup the data and train an SVM, run the following:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-      "    decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
-      "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-      "    tol=0.001, verbose=False) \n",
-      " and I am just testing\n",
-      "<function train_test_split at 0x7fb346f44268>\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.svm import SVC\n",
-    "\n",
-    "X = iris.data\n",
-    "y = iris.target\n",
-    "\n",
-    "classifier = SVC(kernel=\"rbf\", gamma='auto')\n",
-    "classifier.fit(X, y)\n",
-    "predictions = classifier.predict(X)\n",
-    "\n",
-    "print(classifier, \"\\n and I am just testing\")\n",
-    "#print?\n",
-    "print(train_test_split)\n",
-    "#train_test_split?\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.33, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "index.rst  Week1-assignment.ipynb\n",
-      "1\n",
-      "2\n",
-      "3\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "2"
+       "0.9866666666666667"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m Return the Unicode code point for a one-character string.\n",
-       "\u001b[0;31mType:\u001b[0m      builtin_function_or_method\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "ord('b')\n",
-    "ord?\n",
-    "\n",
-    "%ls *\n",
-    "a, b, c = 1, 2, 3\n",
-    "\n",
-    "print(a)\n",
-    "print(b)\n",
-    "print(c)\n",
-    "\n",
-    "import sklearn\n",
-    "sklearn.__version__\n",
-    "\n",
-    "y_train[99]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%who"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_test_split?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#```python\n",
     "from sklearn.svm import SVC\n",
     "\n",
     "X = iris.data\n",
     "y = iris.target\n",
     "\n",
-    "classifier = SVC()\n",
+    "#define SVC as classifier\n",
+    "classifier = SVC(kernel=\"rbf\", gamma='auto')\n",
     "\n",
-    "X.shape\n",
-    "\n",
+    "#fit X, y into classifier\n",
     "classifier.fit(X, y)\n",
     "\n",
-    "predictions = classifier.predict(X)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Overfitting (Variance): tailored to a specific dataset (does not generalize well), misses the point, memorizes the data\n",
-    "- Underfitting (Bias): accuracy could be better, too general "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Import\n",
-    "2. Instantiate (a class)\n",
-    "  - Estimators:\n",
-    "    - Classifiers\n",
-    "    - Regressors\n",
-    "3. Train test split (or cross-validation)\n",
-    "4. Fit\n",
-    "5. Predict"
+    "#predict X\n",
+    "predictions = classifier.predict(X)\n",
+    "\n",
+    "classifier.score(X,y)\n",
+    "#```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(150, 4) (150,) (100, 4) (100,) (50, 4) (50,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.shape, y.shape, X_train.shape, y_train.shape, X_test.shape, y_test.shape) #150 elements ;4 features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -478,19 +263,43 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\bPrinting classifier below:\n",
+      "\n",
+      " SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "    decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
+      "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+      "    tol=0.001, verbose=False)\n",
+      "<function train_test_split at 0x7fa161cb8268>\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "#train_test_split?\n",
+    "\n",
+    "print(\"\\bPrinting classifier below:\\n\\n\", classifier)\n",
+    "\n",
+    "print(train_test_split)\n",
+    "\n",
+    "#calling train_test_split \n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.33, random_state=42)\n",
     "\n",
     "# YOUR CODE HERE\n",
     "x = 0;\n",
     "if x > 0:\n",
-    "    raise NotImplementedError()\n"
+    "    raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
